--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,5 +11,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+   <script
+  src='https://cdn.jotfor.ms/agent/embedjs/0197a27b149c70568aa7a443ed74fd29840e/embed.js?skipWelcome=1&maximizable=1'>
+</script>
   </body>
 </html>
