--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,5 +14,8 @@
   <script
   src='https://cdn.jotfor.ms/agent/embedjs/0197a27b149c70568aa7a443ed74fd29840e/embed.js?skipWelcome=1&maximizable=1'>
 </script>
+<script>
+  window.global = window;
+</script>
   </body>
 </html>
